--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 _obj
 _test
 
+# Ne pas prendre le fichier de profil cover.out
+
+cover.out
+
 # Architecture specific extensions/prefixes
 *.[568vq]
 [568vq].out
